# ONVIFMonitor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  INSTALL  README.md  conanfile.py  conanws.yml  info.json
CMake/: DeployQt5.cmake  Windeployqt.cmake
buildProfiles/: androidArmv7LinuxHost.profile  androidArmv7WinHost.profile  androidArmv8LinuxHost.profile  androidArmv8WinHost.profile  androidx86LinuxHost.profile  androidx86WinHost.profile  androidx86_64LinuxHost.profile  androidx86_64WinHost.profile
hostProfiles/: androidArmv7.profile  androidArmv8.profile  androidx86.profile  androidx86_64.profile  raspberrypios-bullseye.profile
resources/: CMakeLists.txt  default_icons.qrc  fonts.qrc  qt_resources.qrc  qtquickcontrols2.conf  tilesgrid.qrc
resources/TilesGrid/: TilesGrid.qml  TilesGridLayout.qml  qmldir
resources/gui/: AboutPage.qml  BusyCombobox.qml  BusyPopup.qml  CameraImage.qml  CameraStream.qml  CredentialsDialog.qml  DeviceInfoDialog.qml  DeviceInfoPage.qml  DevicePage.qml  DeviceSettingsDialog.qml  DeviceSettingsPage.qml  DevicesListView.qml  DevicesPage.qml  EventHandlerSettingsDialog.qml  EventPropertiesDialog.qml  EventServiceInfoPage.qml  EventSettingsPage.qml  ExpandableListView.qml  FixedSizeGridLayout.qml  Icon.qml  ListItem.qml  MainPage.qml  MediaProfileSettingsPage.qml  MediaProfilesDevicesSettingsPage.qml  MediaProfilesListPage.qml  MediaServiceInfoPage.qml  MonitoringPage.qml  NewDeviceDialog.qml  NewDevicePage.qml  NewEventBindingDialog.qml  OnvifMessageFilterBuilder.qml  PlaceholderPage.qml  SettingsPage.qml  Style.qml  Tile.qml  TileLayout.qml  TileLayoutData.qml  TileLayoutLogic.qml  VideoWallPane.qml  WRoundButton.qml  (+4 more)
resources/gui/FilterBuilder/: BaseFilterComponent.qml
resources/gui/controls/: BusyAction.qml  Button.qml  ComboBox.qml  GridLayout.qml  GroupBox.qml  Icon.qml  IconLabel.qml  InfoDialog.qml  InlineMessage.qml  Popup.qml  ScrollablePage.qml  TabBarFolding.qml  TabButtonFolding.qml  TextField.qml  ToolBar.qml  ToolButton.qml
resources/gui/dialogs/: EditOnvifDeviceDialog.qml  NewOnvifDeviceDialog.qml
resources/gui/gallery/: ColorSetGallery.qml  FormLayoutGallery.qml
resources/icons/default/: index.theme
resources/icons/onvif/: index.theme
src/: AbstractDevice.cpp  AbstractDevice.h  AbstractListModel.cpp  AbstractListModel.h  AdvancedQmlApplicationEngine.cpp  AdvancedQmlApplicationEngine.h  App.cpp  App.h  BackgroundService.cpp  BackgroundService.h  BlockingQueue.h  CMakeLists.txt  Cryptography.cpp  Cryptography.h  Device.cpp  Device.h  DeviceDiscoveryModel.cpp  DeviceDiscoveryModel.h  DeviceInfo.cpp  DeviceInfo.h  DeviceManager.cpp  DeviceManager.h  DevicesModel.cpp  DevicesModel.h  Error.cpp  Error.h  EventBinding.cpp  EventBinding.h  EventBindingModel.cpp  EventBindingModel.h  EventHandler.cpp  EventHandler.h  EventHandlerModel.cpp  EventHandlerModel.h  EventManager.cpp  EventManager.h  EventService.cpp  EventService.h  EventSource.cpp  EventSource.h  (+72 more)
src/AVPlayer/: CMakeLists.txt  ffmpeg.h  main.cpp
src/AsyncFuture/: CMakeLists.txt  asyncfuture.h
src/Onvif/: AboutPage.qml  AudioDeviceComboBox.qml  BusyCombobox.qml  BusyPopup.qml  CameraImage.qml  CameraStream.qml  DeviceInfoDialog.qml  DeviceInfoPage.qml  DevicePage.qml  DeviceSettingsDialog.qml  DevicesListView.qml  DevicesPage.qml  EventHandlerSettingsDialog.qml  EventPropertiesDialog.qml  EventServiceInfoPage.qml  EventSettingsPage.qml  FixedSizeGridLayout.qml  FormLayout.qml  Icon.qml  ListItem.qml  MediaProfileSettingsPage.qml  MediaProfilesDevicesSettingsPage.qml  MediaProfilesListPage.qml  MediaProfilesListView.qml  MediaServiceInfoPage.qml  MonitoringPage.qml  NewDevicePage.qml  NewEventBindingDialog.qml  PingAnimation.qml  PlaceholderPage.qml  SettingsPage.qml  Style.qml  SwipePage.qml  VideoWallPane.qml  main.qml
src/Onvif/FilterBuilder/: DropLine.qml
src/Onvif/controls/: Placeholder.qml
src/Onvif/dialogs/: AddMonitorDialog.qml  EditMonitorDialog.qml  EditOnvifDeviceDialog.qml  NewOnvifDeviceDialog.qml
src/Onvif/pages/: EditMonitorPage.qml
src/QuickFuture/: CMakeLists.txt  qffuture.cpp  qmldir
src/TilesGrid/: Tile.qml  TilesGridLayout.qml  TilesGridLogic.qml  UndoStack.qml
src/android/: AndroidManifest.xml.in
src/android/src/com/github/tereius/onvifmonitor/: Activity.java  ForegroundService.java
